@@ -2957,6 +2957,7 @@
 
   void OSDMenuKeyboard_Setup(char *Title, char *Variable, dword MaxLength);
   bool OSDMenuKeyboard_ChangeKeypad(tKeyPadMode mode, char keypad[26][4]);
+  bool OSDMenuKeyboard_SetKeypadMode(tKeyPadMode mode);
   void OSDMenuKeyboard_LegendButton(dword Line, tButtonIcon ButtonIcon, char *Text);
   void OSDMenuKeyboard_Show(void);
   bool OSDMenuKeyboard_EventHandler(word *event, dword *param1, dword *param2);
